--- a/index.html
+++ b/index.html
@@ -46,8 +46,28 @@
             <h1 class="title"> Vanohra Gaspard</h1>
             <p class="section__text__p2">Aspiring Web Developper</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/')"></button>
+                <button class="btn btn-color-2" 
+                onclick="window.open('./assets/resume.pdf')"
+                >
+                Download Resume
+                </button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">
+                Contact Info
+                </button>
             </div>
+            <div id=" socials container">
+                <img 
+                src="./assets/linkedin.png" 
+                alt="My LinkedIn Profile"
+                class="icon" 
+                onclick="location.href='https://linkedin.com/in/vanohra-gaspard-chrissy/'"
+                /> 
+                <img 
+                src="./assets/github.png" 
+                alt="My GitHubProfile"
+                class="icon" 
+                onclick="location.href='https://github.com/Vanohra/'"
+                />  
         </div>
     </section>
     <script src="script.js"></script>
