--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title"> Vanohra Gaspard</h1>
             <p class="section__text__p2">Aspiring Web Developper</p>
-            <div class="btn-container">
+            <div class="btn-container">    
                 <button class="btn btn-color-2" 
                 onclick="window.open('./assets/resume.pdf')"
                 >
@@ -68,8 +68,58 @@
                 class="icon" 
                 onclick="location.href='https://github.com/Vanohra/'"
                 />  
+            </div>
         </div>
     </section>
+    <section id="about">
+        <p class="section__text__p1">Get To Know Me More </p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img src="./assets/about-pic.png" 
+                alt="Profile Picture"
+                class="about-pic"
+                />
+            </div>
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img src="./assets/experience.png"
+                         alt="Experience icon"
+                         class="icon"
+                        />
+                        <h3>Experience</h3>
+                        <p>2+ years <br>Frontend Developpment</p>
+                    </div>
+                    <div class="details-container">
+                        <img src="./assets/education.png"
+                         alt="Education icon"
+                         class="icon"
+                        />
+                        <h3>Education</h3>
+                        <p>Bachelor of computer science <br>Additional education to be added</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>My name is Vanohra Gaspard, and I am a dedicated sophomore at Georgia State University,
+                        majoring in Computer Science. My passion for technology began to flourish two years ago,
+                        and it has grown exponentially as I have leveraged my skills to benefit my community.
+                        I actively participate in various organizations where I contribute to fostering a 
+                        collaborative environment. My focus is on group collaboration to learn new software and 
+                        programming languages, network, and create productive outcomes. I am particularly interested 
+                        in full-stack and front-end development, as well as exploring iOS, Android, and AI development.
+                        My goal is to use technology for the betterment of my community, which motivates me to continuously
+                         seek out new opportunities, challenge myself, expand my knowledge, and develop my problem-solving skills.
+                        I am eager to connect and collaborate with individuals and groups who share my values and drive for 
+                        innovation in the tech world.
+                        </p>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/ar" alt="Arrow icon" class="icon arrow"
+        onclick="location.href='./experience'"/>
+    </section>
+
     <script src="script.js"></script>
     
 </body>
