--- a/index.html
+++ b/index.html
@@ -92,12 +92,13 @@
                         <p>2+ years <br>Frontend Developpment</p>
                     </div>
                     <div class="details-container">
-                        <img src="./assets/education.png"
+                        <img
+                         src="./assets/education.png"
                          alt="Education icon"
                          class="icon"
                         />
                         <h3>Education</h3>
-                        <p>Bachelor of computer science <br>Additional education to be added</p>
+                        <p>Bachelor of computer science <br/>Additional education to be added</p>
                     </div>
                 </div>
                 <div class="text-container">
@@ -116,8 +117,213 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/ar" alt="Arrow icon" class="icon arrow"
-        onclick="location.href='./experience'"/>
+        <img 
+        src="./assets/arrow.png" 
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+        />
+    </section>
+    <section id="experience">
+        <p class="section__text__p1">Explore My</p>
+        <h1 class="title">Experience</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Tools And Languages</h2>
+                    <div class="article-container">
+                        <article>
+                            <img
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>CSS</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>JavaScript</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>Python</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>Rabit MQ</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img 
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>Git</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>Flask</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>Figma</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Organizations And Activities</h2>
+                    <div class="article-container">
+                        <article>
+                            <img
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>Reaching for Inclusion – Striving for Excellence (RISE) in Computing</h3>
+                                <p>Star Fellow</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>NSBE</h3>
+                                <p>Fellow</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>Rewriting the code</h3>
+                                <p>Fellow</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>ColorStack</h3>
+                                <p>Fellow</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>Bloomberg Tech Lab</h3>
+                                <p>Fellow</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>Girls who code @GSU: Hackathon</h3>
+                                <p>Participant</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>Major League Hacking</h3>
+                                <p>Fellow</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img
+                             src="./assets/checkmark.png"
+                             alt="Experience icon"
+                             class="icon"
+                            />
+                            <div>
+                                <h3>Codepath Tech interview Prep</h3>
+                                <p>Fellow</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#projects'"
+      />
+
     </section>
 
     <script src="script.js"></script>
