--- a/index.html
+++ b/index.html
@@ -323,8 +323,114 @@
         class="icon arrow"
         onclick="location.href='./#projects'"
       />
-
     </section>
+    <section id="projects"> 
+        <p class="section__text__p1">Browse My Recent</p>
+        <h1 class="title">Projects</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img
+                          src="./assets/chatbot.png"
+                          alt="Project 1"
+                          class="project-imh"
+                        />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Chatty The ChatBot</h2>
+                    <div class="btn-container">
+                        <button
+                            class="btn btn-color-2 project btn"
+                            onclick="location.href='https://hithub.com/'"
+                        >
+                            GitHub
+                        </button>
+                        <button
+                            class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/'"
+                        >   Live Demo
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img
+                          src="./assets/portfolio.png"
+                          alt="Project 1"
+                          class="project-imh"
+                        />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Vanohra's Portfolio</h2>
+                    <div class="btn-container">
+                        <button
+                            class="btn btn-color-2 project btn"
+                            onclick="location.href='https://hithub.com/'"
+                        >
+                            GitHub
+                        </button>
+                        <button
+                            class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/'"
+                        >   Live Demo
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img
+                          src="./assets/PantherProtect.png"
+                          alt="Project 1"
+                          class="project-imh"
+                        />
+                    </div>
+                    <h2 class="experience-sub-title project-title">PantherProtect</h2>
+                    <div class="btn-container">
+                        <button
+                            class="btn btn-color-2 project btn"
+                            onclick="location.href='https://hithub.com/'"
+                        >
+                            GitHub
+                        </button>
+                        <button
+                            class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/'"
+                        >   Live Demo
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img
+                          src="./assets/TOA.png"
+                          alt="Project 1"
+                          class="project-imh"
+                        />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Taste Of Ayiti</h2>
+                    <div class="btn-container">
+                        <button
+                            class="btn btn-color-2 project btn"
+                            onclick="location.href='https://hithub.com/'"
+                        >
+                            GitHub
+                        </button>
+                        <button
+                            class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/'"
+                        >   Live Demo
+                        </button>
+                    </div>
+                </div>                
+            </div>
+        </div>
+        <img
+        src="./assets/arrow.png"
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#contact'"
+      />
+    </section>
+
 
     <script src="script.js"></script>
     
