--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
                          class="icon"
                         />
                         <h3>Education</h3>
-                        <p>Bachelor of computer science <br/>Additional education to be added</p>
+                        <p>Bachelor of computer science <br/>Relevant classes: Discrete Mathematics, 
+                        calculus 2, principles of computer science I and II <br> Dean's List</p>
                     </div>
                 </div>
                 <div class="text-container">
@@ -334,7 +335,7 @@
                         <img
                           src="./assets/chatbot.png"
                           alt="Project 1"
-                          class="project-imh"
+                          class="project-img"
                         />
                     </div>
                     <h2 class="experience-sub-title project-title">Chatty The ChatBot</h2>
@@ -357,7 +358,7 @@
                         <img
                           src="./assets/portfolio.png"
                           alt="Project 1"
-                          class="project-imh"
+                          class="project-img"
                         />
                     </div>
                     <h2 class="experience-sub-title project-title">Vanohra's Portfolio</h2>
@@ -380,7 +381,7 @@
                         <img
                           src="./assets/PantherProtect.png"
                           alt="Project 1"
-                          class="project-imh"
+                          class="project-img"
                         />
                     </div>
                     <h2 class="experience-sub-title project-title">PantherProtect</h2>
@@ -403,7 +404,7 @@
                         <img
                           src="./assets/TOA.png"
                           alt="Project 1"
-                          class="project-imh"
+                          class="project-img"
                         />
                     </div>
                     <h2 class="experience-sub-title project-title">Taste Of Ayiti</h2>
