--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-          <img src="./assets/profile-pic.jpg" alt="Vanohra Gaspard profile picture"/
-          >  
+          <img src="./assets/profile-pic.jpg" alt="Vanohra Gaspard profile picture"
+          />  
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
@@ -55,7 +55,7 @@
                 Contact Info
                 </button>
             </div>
-            <div id=" socials container">
+            <div id=" socials-container">
                 <img 
                 src="./assets/linkedin.png" 
                 alt="My LinkedIn Profile"
@@ -89,7 +89,7 @@
                          class="icon"
                         />
                         <h3>Experience</h3>
-                        <p>2+ years <br>Frontend Developpment</p>
+                        <p>Data Strcutures<br>Full-Stack Developpment</p>
                     </div>
                     <div class="details-container">
                         <img
@@ -98,12 +98,12 @@
                          class="icon"
                         />
                         <h3>Education</h3>
-                        <p>Bachelor of computer science <br/>Relevant classes: Discrete Mathematics, 
+                        <p>Bachelor of computer science <br/>Relevant classes: <br>Discrete Mathematics, 
                         calculus 2, principles of computer science I and II <br> Dean's List</p>
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>My name is Vanohra Gaspard, and I am a dedicated sophomore at Georgia State University,
+                    <p>My name is Vanohra Gaspard, and I am a dedicated incomming sophomore at Georgia State University,
                         majoring in Computer Science. My passion for technology began to flourish two years ago,
                         and it has grown exponentially as I have leveraged my skills to benefit my community.
                         I actively participate in various organizations where I contribute to fostering a 
@@ -328,109 +328,86 @@
     <section id="projects"> 
         <p class="section__text__p1">Browse My Recent</p>
         <h1 class="title">Projects</h1>
-        <div class="experience-details-container">
-            <div class="about-containers">
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img
-                          src="./assets/chatbot.png"
-                          alt="Project 1"
-                          class="project-img"
-                        />
-                    </div>
-                    <h2 class="experience-sub-title project-title">Chatty The ChatBot</h2>
-                    <div class="btn-container">
-                        <button
-                            class="btn btn-color-2 project btn"
-                            onclick="location.href='https://hithub.com/'"
-                        >
-                            GitHub
-                        </button>
-                        <button
-                            class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
-                        >   Live Demo
-                        </button>
-                    </div>
+        <div class="projects-container">
+            <div class="details-container color-container">
+                <img src="./assets/chatbot.png" alt="Project 1" class="project-img"/>
+                <h2 class="experience-sub-title project-title">Chatty The ChatBot</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">GitHub</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">Live Demo</button>
                 </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img
-                          src="./assets/portfolio.png"
-                          alt="Project 1"
-                          class="project-img"
-                        />
-                    </div>
-                    <h2 class="experience-sub-title project-title">Vanohra's Portfolio</h2>
-                    <div class="btn-container">
-                        <button
-                            class="btn btn-color-2 project btn"
-                            onclick="location.href='https://hithub.com/'"
-                        >
-                            GitHub
-                        </button>
-                        <button
-                            class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
-                        >   Live Demo
-                        </button>
-                    </div>
+            </div>
+            <div class="details-container color-container">
+                <img src="./assets/portfolio.png" alt="Project 2" class="project-img"/>
+                <h2 class="experience-sub-title project-title">Vanohra's Portfolio</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">GitHub</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">Live Demo</button>
                 </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img
-                          src="./assets/PantherProtect.png"
-                          alt="Project 1"
-                          class="project-img"
-                        />
-                    </div>
-                    <h2 class="experience-sub-title project-title">PantherProtect</h2>
-                    <div class="btn-container">
-                        <button
-                            class="btn btn-color-2 project btn"
-                            onclick="location.href='https://hithub.com/'"
-                        >
-                            GitHub
-                        </button>
-                        <button
-                            class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
-                        >   Live Demo
-                        </button>
-                    </div>
+            </div>
+            <div class="details-container color-container">
+                <img src="./assets/PantherProtect.png" alt="Project 3" class="project-img"/>
+                <h2 class="experience-sub-title project-title">PantherProtect @GSU</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">GitHub</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">Live Demo</button>
                 </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img
-                          src="./assets/TOA.png"
-                          alt="Project 1"
-                          class="project-img"
-                        />
-                    </div>
-                    <h2 class="experience-sub-title project-title">Taste Of Ayiti</h2>
-                    <div class="btn-container">
-                        <button
-                            class="btn btn-color-2 project btn"
-                            onclick="location.href='https://hithub.com/'"
-                        >
-                            GitHub
-                        </button>
-                        <button
-                            class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
-                        >   Live Demo
-                        </button>
-                    </div>
-                </div>                
+            </div>
+            <div class="details-container color-container">
+                <img src="./assets/bloomberg.png" alt="Project 4" class="project-img"/>
+                <h2 class="experience-sub-title project-title">Bloomberg Tech Lab</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">GitHub</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">Live Demo</button>
+                </div>
+            </div>
+            <div class="details-container color-container">
+                <img src="./assets/TOA.png" alt="Project 5" class="project-img"/>
+                <h2 class="experience-sub-title project-title">Taste Of Ayiti (Haiti)</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">GitHub</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">Live Demo</button>
+                </div>
             </div>
         </div>
-        <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'"/>  
     </section>
+    
+    <section id="contact">
+        <p class="section__text__p1">Get in Touch</p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+          <div class="contact-info-container">
+            <img
+              src="./assets/email.png"
+              alt="Email icon"
+              class="icon contact-icon email-icon"
+            />
+            <p><a href="mailto:examplemail@gmail.com">gaspardvanohra@gmail.com</a></p>
+          </div>
+          <div class="contact-info-container">
+            <img
+              src="./assets/linkedin.png"
+              alt="LinkedIn icon"
+              class="icon contact-icon"
+            />
+            <p><a href="https://linkedin.com/in/vanohra-gaspard-chrissy/">LinkedIn</a></p>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <nav>
+          <div class="nav-links-container">
+            <ul class="nav-links">
+              <li><a href="#about">About</a></li>
+              <li><a href="#experience">Experience</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
+        </nav>
+        <p>Copyright &#169; 2024 Vanohra Gaspard. All Rights Reserved.</p>
+      </footer>
 
 
     <script src="script.js"></script>
