HTML-Projects section
Editing the GitHub links to the projects

--- a/index.html
+++ b/index.html
@@ -333,40 +333,40 @@
                 <img src="./assets/chatbot.png" alt="Project 1" class="project-img"/>
                 <h2 class="experience-sub-title project-title">Chatty The ChatBot</h2>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">GitHub</button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">Live Demo</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/Chatbot-'">GitHub</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/Chatbot-'">Live Demo</button>
                 </div>
             </div>
             <div class="details-container color-container">
                 <img src="./assets/portfolio.png" alt="Project 2" class="project-img"/>
                 <h2 class="experience-sub-title project-title">Vanohra's Portfolio</h2>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">GitHub</button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">Live Demo</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/Vanohra--Portfolio'">GitHub</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/Vanohra--Portfolio'">Live Demo</button>
                 </div>
             </div>
             <div class="details-container color-container">
                 <img src="./assets/PantherProtect.png" alt="Project 3" class="project-img"/>
                 <h2 class="experience-sub-title project-title">PantherProtect @GSU</h2>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">GitHub</button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">Live Demo</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/marmwangi/Panther-Protect'">GitHub</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/marmwangi/Panther-Protect'">Live Demo</button>
                 </div>
             </div>
             <div class="details-container color-container">
                 <img src="./assets/bloomberg.png" alt="Project 4" class="project-img"/>
                 <h2 class="experience-sub-title project-title">Bloomberg Tech Lab</h2>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">GitHub</button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">Live Demo</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/bbit-learning-labs'">GitHub</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/bbit-learning-labs'">Live Demo</button>
                 </div>
             </div>
             <div class="details-container color-container">
                 <img src="./assets/TOA.png" alt="Project 5" class="project-img"/>
                 <h2 class="experience-sub-title project-title">Taste Of Ayiti (Haiti)</h2>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">GitHub</button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/'">Live Demo</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/Taste-of-Ayiti-Haiti-'">GitHub</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/Taste-of-Ayiti-Haiti-'">Live Demo</button>
                 </div>
             </div>
         </div>
