--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <li> <a href="#experience">Experience</a></li>
                 <li> <a href="#projects">Projects</a></li>
                 <li> <a href="#contact">Contact</a></li>
+                <li> <a href="#purpose">Purpose</a></li>
+
             </ul>
         </div>
     </nav>
@@ -32,6 +34,7 @@
             <li> <a href="#about" onclick="toggleMenu()">About</a></li>
             <li> <a href="#experience" onclick="toggleMenu()">Experience</a></li>
             <li> <a href="#projects" onclick="toggleMenu()">Projects</a></li>
+            <li> <a href="#purpose" onclick="toggleMenu()">Purpose</a></li>
             <li> <a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
@@ -370,9 +373,74 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'"/>  
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#purpose'"/>  
     </section>
-    
+
+   
+
+    <section id="purpose">
+        <p class="section__text__p1">Get To Know My</p>
+        <h1 class="title">Purpose</h1>
+        <div class="text-container">
+            <p>
+                My passion and dedication for helping my community were strengthened while growing up in Haiti,
+                where I faced many challenges and witnessed numerous disparities among people and children.
+                Over the years, I have strived to be an advocate for change and continue this work through technology,
+                exemplified by projects like Panther Protect and Taste of Ayiti. Here are some of my achievements.
+            </p>
+        </div>
+        <div class="purpose-container">
+            <div class="details-container color-container">
+                <img src="./assets/ELLA1.jpg" alt="Purpose 1" class="purpose-img"/>
+                <h2 class="experience-sub-title project-title">ELLA.inc Fellow</h2>
+                <p>
+                    In the summer of 2022, I had the pleasure of participating in the ELLA Inc
+                    (Entrepreneurial Ladies Leading with Action) camp at the University of Miami. 
+                    I met dedicated young women from Latin America who were passionate about advocating 
+                    for societal change. Together, we created a project and business plan, which we later
+                    presented to sponsors and judges.
+                </p>
+            </div>
+        </div>
+        <div class="purpose-container">
+            <div class="details-container color-container">
+                <img src="./assets/Plus305.png" alt="Purpose 3" class="purpose-img"/>
+                <h2 class="experience-sub-title project-title">All Against Hunger</h2>
+                <p>
+                    In the winter of 2023, my business plan developed at the ELLA Inc camp was published 
+                    by Plus305. This milestone provided an opportunity to raise awareness about Haiti and 
+                    discuss important issues facing the country.
+                </p>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 purpose-btn" onclick="location.href='https://www.plus305.com/vanohragaspard'">Read Article</button>
+                </div>
+            </div>
+        </div>
+        <div class="purpose-container">
+            <div class="details-container color-container">
+                <img src="./assets/FOKAL.png" alt="Purpose 3" class="purpose-img"/>
+                <h2 class="experience-sub-title project-title">Human Rights</h2>
+                <p>
+                    During my academic journey at College Les Oliviers in Haiti, I participated in creating
+                    a Human Rights Children's Book. The book addressed crucial issues such as the right to 
+                    education and security, in both French and Haitian Creole. 
+                </p>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 purpose-btn" onclick="location.href='https://fokal.org/index.php/nouvel-fokal/31-nos-programmes/1311-la-declaration-universelle-des-droits-humains-en-roman-photo'">GitHub</button>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'"/>  
+
+    </section>
+        
+    <img 
+        src="./assets/arrow.png" 
+        alt="Arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#experience'"
+    />
+
     <section id="contact">
         <p class="section__text__p1">Get in Touch</p>
         <h1 class="title">Contact Me</h1>
@@ -402,7 +470,9 @@
               <li><a href="#about">About</a></li>
               <li><a href="#experience">Experience</a></li>
               <li><a href="#projects">Projects</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#purpose">Purpose</a></li>
+              <li><a href="#contact">contact</a></li>
+
             </ul>
           </div>
         </nav>
