--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title"> Vanohra Gaspard</h1>
-            <p class="section__text__p2">Aspiring Web Developper</p>
+            <p class="section__text__p2">Aspiring software Developper</p>
             <div class="btn-container">    
                 <button class="btn btn-color-2" 
-                onclick="window.open('./assets/resume.pdf')"
+                onclick="window.open('./assets/MyResume.pdf')"
                 >
                 Download Resume
                 </button>
