--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title"> Vanohra Gaspard</h1>
-            <p class="section__text__p2">Aspiring software Developper</p>
+            <p class="section__text__p2">Aspiring Software Developper</p>
             <div class="btn-container">    
                 <button class="btn btn-color-2" 
                 onclick="window.open('./assets/MyResume.pdf')"
@@ -368,8 +368,8 @@
                 <img src="./assets/TOA.png" alt="Project 5" class="project-img"/>
                 <h2 class="experience-sub-title project-title">Taste Of Ayiti (Haiti)</h2>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/Taste-of-Ayiti-Haiti-'">GitHub</button>
-                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/Taste-of-Ayiti-Haiti-'">Live Demo</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/toa-project'">GitHub</button>
+                    <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Vanohra/toa-project'">Live Demo</button>
                 </div>
             </div>
         </div>
