--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title"> Vanohra Gaspard</h1>
-            <p class="section__text__p2">Aspiring Software Developper</p>
+            <p class="section__text__p2">Aspiring Software Developer</p>
             <div class="btn-container">    
                 <button class="btn btn-color-2" 
                 onclick="window.open('./assets/MyResume.pdf')"
