purpose link updated

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                     education and security, in both French and Haitian Creole. 
                 </p>
                 <div class="btn-container">
-                    <button class="btn btn-color-2 purpose-btn" onclick="location.href='https://fokal.org/index.php/nouvel-fokal/31-nos-programmes/1311-la-declaration-universelle-des-droits-humains-en-roman-photo'">GitHub</button>
+                    <button class="btn btn-color-2 purpose-btn" onclick="location.href='https://fokal.org/index.php/nouvel-fokal/31-nos-programmes/1311-la-declaration-universelle-des-droits-humains-en-roman-photo'">View</button>
                 </div>
             </div>
         </div>
